--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -1,23 +1,20 @@
 ### web
 server.port=8080
 server.servlet.context-path=/xxl-job-admin
-
 ### actuator
-management.server.servlet.context-path=/actuator
+management.server.base-path=/actuator
 management.health.mail.enabled=false
-
 ### resources
 spring.mvc.servlet.load-on-startup=0
 spring.mvc.static-path-pattern=/static/**
-spring.resources.static-locations=classpath:/static/
-
+spring.web.resources.static-locations=classpath:/static/
+spring.profiles.include=pro,prod
 ### freemarker
 spring.freemarker.templateLoaderPath=classpath:/templates/
 spring.freemarker.suffix=.ftl
 spring.freemarker.charset=UTF-8
 spring.freemarker.request-context-attribute=request
 spring.freemarker.settings.number_format=0.##########
-
 ### mybatis
 mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 #mybatis.type-aliases-package=com.xxl.job.admin.core.model
